// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor should render correctly (snapshot) 1`] = `
<div>
  <a
    class="ant-typography"
  />
</div>
`;

exports[`Headings should render correctly (snapshot) 1`] = `
<div>
  <h1
    class="ant-typography"
  />
</div>
`;

exports[`Headings should render correctly (snapshot) 2`] = `
<div>
  <h2
    class="ant-typography"
  />
</div>
`;

exports[`Headings should render correctly (snapshot) 3`] = `
<div>
  <h3
    class="ant-typography"
  />
</div>
`;

exports[`Headings should render correctly (snapshot) 4`] = `
<div>
  <h4
    class="ant-typography"
  />
</div>
`;

exports[`Headings should render correctly (snapshot) 5`] = `
<div>
  <h5
    class="ant-typography"
  />
</div>
`;

exports[`Headings should render correctly (snapshot) 6`] = `
<div>
  <h5
    class="ant-typography"
  />
</div>
`;

exports[`Paragraph should render correctly (snapshot) 1`] = `
<div>
  <div
    class="ant-typography"
  />
</div>
`;

exports[`Texts should render correctly (snapshot) 1`] = `
<div>
  <span
    class="ant-typography"
  >
    <strong />
  </span>
</div>
`;

exports[`Texts should render correctly (snapshot) 2`] = `
<div>
  <span
    class="ant-typography"
  >
    <i />
  </span>
</div>
`;

exports[`Texts should render correctly (snapshot) 3`] = `
<div>
  <span
    class="ant-typography"
  >
    <del />
  </span>
</div>
`;
